--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,5 +88,6 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.3.0'
+    compile rootProject.ext.support_v7
+    compile rootProject.ext.eventbus
 }
