--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 ext {
     support_v7 = 'com.android.support:appcompat-v7:23.3.0'
     eventbus = 'org.greenrobot:eventbus:3.0.0'
+    multidex = 'com.android.support:multidex:1.0.0'
 }
 
 buildscript {
