开发环境与生产环境的服务器 base url 配置

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ android {
     buildTypes { // buildTypes 配置
         release {
             buildConfigField "boolean", "LOG_DEBUG", "false"
-            buildConfigField "boolean", "SERVER_URL_DEBUG", "false"
+            buildConfigField "String", "SERVER_URL", "\"http://api.release.com\""
             zipAlignEnabled true
             minifyEnabled true
             shrinkResources true
@@ -35,7 +35,7 @@ android {
 
         debug {
             buildConfigField "boolean", "LOG_DEBUG", "true"
-            buildConfigField "boolean", "SERVER_URL_DEBUG", "true"
+            buildConfigField "String", "SERVER_URL", "\"http://api.debug.com\""
         }
     }
 
