--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-apply from: 'dependencies.gradle'
+apply from: 'appConfig.gradle'
 
 buildscript {
     repositories {
@@ -8,7 +8,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:2.1.0'
 
-        // NOTE: Do not place your application dependencies here; they belong
+        // NOTE: Do not place your application appConfig here; they belong
         // in the individual module build.gradle files
     }
 }
